2008-01-18  John W. Eaton  <jwe@octave.org>

	* optimization/sqp.m: End each function with endfunction.

2008-01-18  Ben Abbott  <bpabbott@mac.com>

	* polynomial/residue.m: For each group of pole multiplicity, set
	the poles of the group to the value of the group's average.

2008-01-17  Tetsuro KURITA  <tkurita@mac.com>

	* plot/print.m: Handle PDF output.
	* plot/drawnow.m: Add "PDF" in a list of enhanced_terminals. 

2008-01-17  John W. Eaton  <jwe@octave.org>

	* path/savepath.m: Print newline before initial comment line.
	Double up single quote characters.
	* path/__extractpath__.m: Return just the path as a string.
	Undo single quote character doubling.

	* path/pathdef.m: Avoid eval.  Simplify.

	* path/pathdef.m: Use fullfile instead of concatenating with filesep.
	* path/__extractpath__.m, path/savepath.m: Use unwind_protect to
	avoid possible file descriptor leak.

2008-01-17  Ben Abbott  <bpabbott@mac.com>

	* path/savepath.m: Warn if modified file is not explicitly specified.
	* startup/main-rcfile: Call atexit ("__finish__").

2008-01-16  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (__do_enhanced_option__): New subfunction.
	Use it to disable enhanced mode for individual labels and titles.

	* startup/Makefile.in (SOURCES): Add __finish__.m to the list.
	(install install-strip, uninstall): Handle function files.

2008-01-16  Ben Abbott  <bpabbott@mac.com>

	* startup/__finish__.m: New file.
	* path/__extractpath__.m, path/matlabroot.m,
	path/pathdef.m: New files.
	* path/Makefile.in (SOURCES): Add them to the list.

2008-01-15  Thomas Weber  <thomas.weber.mail@gmail.com>

	* special-matrix/vander.m: Vectorize.  New test.

	* elfun/acot.m, elfun/acoth.m, elfun/acsc.m, elfun/acsch.m,
	elfun/asec.m, elfun/asech.m, elfun/cot.m, elfun/coth.m,
	elfun/csc.m,elfun/csch.m, elfun/lcm.m, elfun/sec.m, elfun/sech.m,
	general/rem.m, miscellaneous/bincoeff.m, miscellaneous/xor.m,
	specfun/beta.m, specfun/log2.m, specfun/pow2.m: